# nomikop

./: .gitignore  .gitmodules  Battle.tscn  CMakeLists.txt  Door.gd  Door.tscn  House.tscn  Player.gd  Player.tscn  PlayerHome.tscn  README.md  SceneManager.gd  SceneManager.tscn  TallGrass.gd  TallGrass.tscn  Town.tscn  go.mod  main.c  main.cpp  main.go  project.godot  sources.cmake
Shared/: Attack.swift  ContentView.swift  Creature.swift  FightController.swift  FightScene.swift  FightState.swift  GameController.swift  GameScene.swift  GameState.swift  Input.swift  OutsideScene.swift  Persistence.swift  nomikopApp.swift
Tests iOS/: Tests_iOS.swift
Tests macOS/: Tests_macOS.swift
assets/buildings/: house.png.import
assets/buildings/interiors/: door_matt.png.import  player_home.png.import
assets/plants/: tall_grass.png.import
assets/tilesets/: gras.png.import
nomikop.xcodeproj/: project.pbxproj
nomikop.xcodeproj/xcuserdata/fabiankropfhamer.xcuserdatad/xcschemes/: xcschememanagement.plist
scenes/: Battle.tscn  Door.tscn  House.tscn  Player.tscn  PlayerHome.tscn  SceneManager.tscn  TallGrass.tscn  Town.tscn
scripts/: Battle.gd
scripts/autoload/: Utils.gd
src/: Renderer.cpp  Renderer.h  Renderer.hpp  fight.c  fight.h  main.c  main.cpp  render.c  render.h  screen.c  screen.h  state.c  state.h  text.c  text.h  texture.c  texture.h  world.c  world.h
